# asio-server

./: CMakeLists.txt  README.md  main.cpp
CppServer/client/: client.hpp
CppServer/core/: app.cpp  app.hpp  base_connection.hpp  dbconn.cpp  dpconn.hpp  header.hpp  logger.hpp  math.cpp  math.hpp  non_constructible.h  non_copyable.hpp  typedefs.hpp  utils.hpp
CppServer/py/: requirements.txt
CppServer/py/dbserver/: db.sqlite3  manage.py
CppServer/py/dbserver/dbhandler/: apps.py  serializers.py  urls.py  views.py
CppServer/py/dbserver/dbserver/: asgi.py  settings.py  urls.py  wsgi.py
CppServer/py/dbserver/templates/: index.html
CppServer/servers/chat_server/: chat_server.cpp  chat_server.hpp
CppServer/servers/http_server/: connection.cpp  connection.hpp  http_server.cpp  http_server.hpp  request.cpp  request.hpp  response.cpp  response.hpp  settings.hpp  settings_base.hpp
static/: main.js  particles.js  secret.css  secret.js  stats.js  style.css
templates/: greet.html  home.txt  index.html  secret.html  signup.html  tests.py
